syntax = "proto3";

option java_package = "com.example.data";
option java_multiple_files = true;

message UserPreferences {
  string user_id = 1;
  string user_token = 2;
  string user_role = 3;
}